fix font size on mobile

--- a/laboratorio-guidotti/ui.frontend/src/main/webpack/components/_text.scss
+++ b/laboratorio-guidotti/ui.frontend/src/main/webpack/components/_text.scss
@@ -77,13 +77,17 @@
 
 
 @include respond-to(small-devices) {
-  .cmp-text {
-    font-size: $font-size;
+  .text {
+    .cmp-text {
+      font-size: $font-size;
+    }
   }
 }
 @include respond-to(desktop) {
-  .cmp-text {
-    font-size: $font-size-max;
+  .text {
+    .cmp-text {
+      font-size: $font-size-max;
+    }
   }
 }
 
